# termux-x-c2

./: .gitattributes  config.json  cupcake-server-linux-amd64  cupcake-server-linux-arm64  run.sh
Client/: Cargo.toml
Client/src/: backoff.rs  batch_handler.rs  config.rs  connection.rs  crypto.rs  dotnet.rs  error.rs  executor.rs  fs.rs  handler.rs  http_transfer.rs  injection.rs  lib.rs  main.rs  plugin_router.rs  process.rs  pty.rs  socks.rs  stealth.rs  types.rs  utils.rs
Client/src/transport/: dns.rs  mod.rs  tcp.rs  ws.rs
MCPClient/: client.py
assets/: client_template_linux  client_template_linux_arm64  client_template_linux_dns  client_template_linux_tcp
assets/plugins/: manifest.json
storage/: cupcake.db
