[package]
name = "sys-info-collector"
version = "0.1.0"
edition = "2021"

[features]
default = ["ws"]  # Default to WebSocket if not specified
ws = ["dep:tokio-tungstenite", "dep:url"]
tcp = []  # TCP protocol (uses tokio's built-in TcpStream)
dns = ["dep:trust-dns-resolver"]  # DNS 隧道协议实现

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"], optional = true }
tokio-util = { version = "0.7", features = ["codec", "compat"] }
yamux = "0.10"
url = { version = "2.5", optional = true }
trust-dns-resolver = { version = "0.23", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4"] }
sha2 = "0.10"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
hostname = "0.3"
whoami = "1.4"
futures-util = "0.3"
encoding_rs = "0.8"
base64 = "0.21"
async-trait = "0.1"
aes-gcm = { version = "0.10", features = ["aes", "getrandom"] }
rand = "0.8"
reqwest = { version = "0.11", default-features = false, features = ["json", "multipart", "stream", "rustls-tls"] }
portable-pty = "0.8"
sysinfo = "0.29"
hex = "0.4"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "winnt", "processthreadsapi", "memoryapi", "handleapi", 
    "errhandlingapi", "winbase", "tlhelp32", "winuser",
    "oleauto", "combaseapi", "objbase", "unknwnbase",
    "debugapi", "sysinfoapi"
] }
widestring = "1.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = { version = "0.27", features = ["process", "fs", "user"] }

[dev-dependencies]
proptest = "1.4"
mockall = "0.12"
tempfile = "3.8"

[profile.release]
# 体积优化配置 - 目标：二进制文件小于 5MB
opt-level = "z"     # 优化体积而非速度
lto = true          # 启用链接时优化
codegen-units = 1   # 减少代码生成单元以提高优化效果
strip = true        # 去除调试符号
panic = "abort"     # panic 时直接终止，减少展开代码
